--- a/frontend/src/app/add-team/add-team.component.html
+++ b/frontend/src/app/add-team/add-team.component.html
@@ -40,7 +40,7 @@
       Change password
     </button>
 
-    <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
+    <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon" style="margin-left: 10px;"
       (click)="back()">
       Back
     </button>
@@ -52,7 +52,7 @@
 
 
 <mat-card>
-  <mat-card-title>Add a new Athlete</mat-card-title>
+  <mat-card-title>Assign athlete to team:</mat-card-title>
   <mat-card-content>
     <form>
       <div class="container-fluid">
