--- a/frontend/src/app/home-page/home-page.component.html
+++ b/frontend/src/app/home-page/home-page.component.html
@@ -94,14 +94,14 @@
         </div>
 
 
-        <div>
+        <div  style="margin-top: 3px;">
           <label>Medal winners only? : </label>
           <mat-radio-group [formControl]="medalWinnerFormControl">
             <mat-radio-button value="true">Yes</mat-radio-button>
           </mat-radio-group>
         </div>
 
-        <button mat-raised-button color="primary" (click)="search()">Search</button>
+        <button mat-raised-button color="primary" (click)="search()" style="margin-top: 3px;">Search</button>
 
 
       </form>
