--- a/frontend/src/app/national-delegation/national-delegation.component.html
+++ b/frontend/src/app/national-delegation/national-delegation.component.html
@@ -40,9 +40,9 @@
       Change password
     </button>
 
-    <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
+    <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon" style="margin-left: 10px;"
       (click)="back()">
-      Back
+      Log out/Home 
     </button>
   </div>
 
