--- a/frontend/src/app/edit-tournament/edit-tournament.component.html
+++ b/frontend/src/app/edit-tournament/edit-tournament.component.html
@@ -35,13 +35,13 @@
 </mat-toolbar>
 
 
-<h3 style="margin-left: 35px;">Sport:{{currentTournament.sportName}} Discipline: {{currentTournament.disciplineName}} <span
-    class="badge bg-info"></span></h3>
+<h3 style="margin-left: 35px;">Sport:{{currentTournament.sportName}} Discipline: {{currentTournament.disciplineName}}
+  <span class="badge bg-info"></span></h3>
 
 
 
 <mat-grid-list cols="2" rowHeight="4:2">
-  
+
   <mat-grid-tile>
     <mat-card>
       <mat-card-title>Select Delegate</mat-card-title>
@@ -51,8 +51,8 @@
 
           <mat-form-field appearance="fill">
             <mat-label>Delegate</mat-label>
-            <mat-select [(ngModel)]="delegate" name="delegate" placeholder="delegate">
-              <mat-option *ngFor="let d of delegates" [value]="d.username" [value]="d">
+            <mat-select [formControl]="delegateForm"  placeholder="delegate">
+              <mat-option *ngFor="let d of delegates" [value]="d">
                 {{d.name}} {{d.surname}}
               </mat-option>
             </mat-select>
@@ -88,33 +88,45 @@
 
 
         <form *ngIf="currentTournament.individual">
-        
+
+          <mat-form-field appearance="fill">
+            <mat-label>Select players to add to this tournament</mat-label>
+            <mat-select [formControl]="selectedAthletesForm" multiple>
+
+              <mat-option *ngFor="let c of athletes" [value]="c">
+                {{c.name}} {{c.surname}} : {{c.country.countryName}}
+              </mat-option>
+
+            </mat-select>
+          </mat-form-field>
+
+      
         </form>
 
         <form *ngIf="!currentTournament.individual">
-         
+          
+
+            <mat-form-field appearance="fill">
+              <mat-label>Select teams to add to this tournament</mat-label>
+              <mat-select [formControl]="selectedTeamsForm" multiple>
+  
+                <mat-option *ngFor="let c of teams" [value]="c">
+                  {{c.teamName}} 
+                </mat-option>
+  
+              </mat-select>
+            </mat-form-field>
+  
+
         </form>
 
 
-        <div *ngFor="let a of athletes">
-
-          <mat-checkbox [checked]="a.checked">
-            {{ a.name }} {{a.surname}} : {{a.country.countryName}}
-          </mat-checkbox>
-        </div>
-
-        <div *ngFor="let t of teams">
-
-          <mat-checkbox [checked]="t.checkedTeam">
-            {{t.teamName}}
-          </mat-checkbox>
-        </div>
 
 
         <br>
 
-
-        <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
+        
+        <button [disabled]="!delegateSelected" classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
           (click)="saveTournament()" color="primary">
           Save Changes
         </button>
@@ -197,9 +209,9 @@
         <table class="table table-bordered">
           <thead>
             <tr>
-  
+
               <th scope="col">Team name</th>
-  
+
             </tr>
           </thead>
           <tbody>
@@ -207,9 +219,9 @@
               <td>
                 {{t.teamName}}
               </td>
-  
+
             </tr>
-  
+
           </tbody>
         </table>
 
