--- a/frontend/src/app/national-delegation/national-delegation.component.html
+++ b/frontend/src/app/national-delegation/national-delegation.component.html
@@ -123,63 +123,6 @@
   </mat-card-content>
 </mat-card>
 
-<!-- <br>
-<div class="span3">
-
-  <div class="container">
-    <h5>All players</h5>
-    <div class="row">
-      <div class="col-12">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th scope="col">Name</th>
-              <th scope="col">Surname</th>
-              <th scope="col">Country</th>
-              <th scope="col">Sex</th>
-              <th scope="col">Sport</th>
-              <th scope="col">Disciplines</th>
-              <th scope="col">Medal Winner</th>
-
-            </tr>
-          </thead>
-          <tbody>
-
-            <tr *ngFor='let c of competitors'>
-              <td>
-                {{c.name}}
-
-              </td>
-              <td>
-                {{c.surname}}
-              </td>
-              <td>
-                {{c.country.countryName}}
-              </td>
-              <td>
-                {{c.sex}}
-              </td>
-              <td>
-                {{c.competesIn[0].sportName}}
-              </td>
-              <td>
-                <div *ngFor='let d of c.competesIn'>
-                  {{d.disciplineName}}
-                </div>
-              </td>
-              <td>
-                {{c.medalWinner}}
-              </td>
-
-
-            </tr>
-
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div> -->
 
 <div class="container">
   
@@ -190,7 +133,7 @@
 </mat-paginator>
 
 </div>
-<h5>Search Results:</h5>
+<h5>All Athletes of {{currentUser.nationality}}:</h5>
 <div class="span3">
   <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     
