--- a/frontend/src/app/insert-results/insert-results.component.html
+++ b/frontend/src/app/insert-results/insert-results.component.html
@@ -1,1 +1,131 @@
-<p>insert-results works!</p>
+<mat-toolbar color="primary">
+
+
+    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+    <mat-menu #menu="matMenu">
+
+
+        <div>
+            <button mat-menu-item color="primary" (click)="overviewSports()">Overview Sports</button>
+        </div>
+
+        <div>
+            <button mat-menu-item color="primary" (click)="overviewAthletesBySport()">Overview Athletes by
+                sport</button>
+        </div>
+
+        <div>
+            <button mat-menu-item color="primary" (click)="addTeam()">Assign Athletes to Team</button>
+        </div>
+
+
+        <div>
+            <button mat-menu-item color="primary" (click)="home()">Home </button>
+        </div>
+
+
+
+
+
+    </mat-menu>
+    <span class="example-spacer"></span>
+
+
+
+
+    <div class="buttons-row">
+
+
+        <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
+            (click)="changePassword()">
+            Change password
+        </button>
+
+        <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
+            style="margin-left: 10px;" (click)="back()">
+            Back
+        </button>
+    </div>
+
+
+</mat-toolbar>
+
+<mat-card>
+    <mat-card-title>Insert Results</mat-card-title>
+    <mat-card-content>
+        <div class="container">
+            <form >
+
+
+                <p>
+                    <mat-label style="margin-right: 12px;">Home Team Result</mat-label>
+                    <mat-form-field>
+                        <input type="text" matInput placeholder= "{{currentEvent.homeTeam.teamName}}" [(ngModel)]="resultHome" name="Home">
+                    </mat-form-field>
+                </p>
+    
+                <p> 
+                    <mat-label style="margin-right: 12px;">Away Team Result</mat-label>
+                    <mat-form-field>
+                        <input type="text" matInput placeholder="{{currentEvent.awayTeam.teamName}}" [(ngModel)]="resultAway" name="Away">
+                    </mat-form-field>
+                </p>
+    
+                <p>
+                    <mat-form-field>
+                        <input type="text" matInput placeholder="Time:" [(ngModel)]="time" name="time">
+                    </mat-form-field>
+                </p>
+    
+                <mat-form-field appearance="fill">
+                    <mat-label>Choose a date</mat-label>
+                    <input matInput [matDatepicker]="picker" [(ngModel)]="date" name="date">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                  </mat-form-field>
+    
+                <mat-form-field appearance="fill">
+                    <mat-label>Location</mat-label>
+                    <mat-select [(ngModel)]="location" name="location" >
+                      <mat-option *ngFor="let l of this.currentTournament.location" [value]="l">
+                        {{l}}
+                      </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            
+    
+    
+                <div>
+                    <label>Winner </label>
+                    <mat-radio-group [formControl]="winnerForm">
+                        <mat-radio-button value="home">HOME: {{currentEvent.homeTeam.teamName}} </mat-radio-button>
+                        <mat-radio-button value="away">AWAY: {{currentEvent.awayTeam.teamName}} </mat-radio-button>
+                    </mat-radio-group>
+                </div>
+    
+    
+             
+    
+            </form>
+    
+    
+         
+        
+                <p *ngIf="error" class="error">
+                    {{ error }}
+                </p>
+                <p *ngIf="message.length!=0" class="message">
+                    {{ message }}
+                  </p>
+                  <br>
+
+                <div class="button">
+                    <button mat-raised-button color="primary"  (click)="finishEditing()" > Finish</button>
+                </div>
+          
+         
+        </div>
+        
+
+    </mat-card-content>
+</mat-card>
