--- a/frontend/src/app/edit-tournament/edit-tournament.component.html
+++ b/frontend/src/app/edit-tournament/edit-tournament.component.html
@@ -144,57 +144,59 @@
 
 <div class="container" *ngIf="currentTournament.individual">
   <h5>Athletes</h5>
-
-  <div class="row">
-    <div class="col-12">
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Surname</th>
-            <th scope="col">Country</th>
-            <th scope="col">Sex</th>
-            <th scope="col">Sport</th>
-            <th scope="col">Disciplines</th>
-            <th scope="col">Medal Winner</th>
-
-          </tr>
-        </thead>
-        <tbody>
-
-          <tr *ngFor='let c of currentTournament.competitors'>
-            <td>
-              {{c.name}}
-
-            </td>
-            <td>
-              {{c.surname}}
-            </td>
-            <td>
-              {{c.country.countryName}}
-            </td>
-            <td>
-              {{c.sex}}
-            </td>
-            <td>
-              {{c.competesIn[0].sportName}}
-            </td>
-            <td>
-              <div *ngFor='let d of c.competesIn'>
-                {{d.disciplineName}}
-              </div>
-            </td>
-            <td>
-              {{c.medalWinner}}
-            </td>
-
-
-          </tr>
-
-        </tbody>
-      </table>
-
+  <div class="span3">
+    <div class="row">
+      <div class="col-12">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Surname</th>
+              <th scope="col">Country</th>
+              <th scope="col">Sex</th>
+              <th scope="col">Sport</th>
+              <th scope="col">Disciplines</th>
+              <th scope="col">Medal Winner</th>
+  
+            </tr>
+          </thead>
+          <tbody>
+  
+            <tr *ngFor='let c of currentTournament.competitors'>
+              <td>
+                {{c.name}}
+  
+              </td>
+              <td>
+                {{c.surname}}
+              </td>
+              <td>
+                {{c.country.countryName}}
+              </td>
+              <td>
+                {{c.sex}}
+              </td>
+              <td>
+                {{c.competesIn[0].sportName}}
+              </td>
+              <td>
+                <div *ngFor='let d of c.competesIn'>
+                  {{d.disciplineName}}
+                </div>
+              </td>
+              <td>
+                {{c.medalWinner}}
+              </td>
+  
+  
+            </tr>
+  
+          </tbody>
+        </table>
+  
+      </div>
     </div>
+
   </div>
 </div>
 
