ne radi iz nekog razloga

--- a/frontend/src/app/delegate-page/delegate-page.component.html
+++ b/frontend/src/app/delegate-page/delegate-page.component.html
@@ -41,7 +41,7 @@
 
 
 <mat-card>
-  <h4 style="color:navy">National Delegation page</h4>
+  <h4 style="color:blue">Delegate Page</h4>
   <mat-card-title>Select tournament for this delegate - Name:{{currentUser.name}}</mat-card-title>
   <mat-card-content>
     <form>
