--- a/frontend/src/app/national-delegation/national-delegation.component.html
+++ b/frontend/src/app/national-delegation/national-delegation.component.html
@@ -52,7 +52,7 @@
 
 
 <mat-card>
-  <h5>National Delegation page</h5>
+  <h5 style="color:blue">National Delegation page</h5>
   <mat-card-title>Add a new Athlete</mat-card-title>
   <mat-card-content>
     <form>
