--- a/frontend/src/app/overview-disciplines/overview-disciplines.component.html
+++ b/frontend/src/app/overview-disciplines/overview-disciplines.component.html
@@ -49,6 +49,9 @@
   
   </mat-toolbar>
 
+  <h5 >OverviewSports/<span style="color:blue">{{sportName}}</span>
+
+  </h5>
   <div class="container">
     <h5>All Disciplines</h5>
     <div class="row">
