--- a/frontend/src/app/view-athletes-by-discipline/view-athletes-by-discipline.component.html
+++ b/frontend/src/app/view-athletes-by-discipline/view-athletes-by-discipline.component.html
@@ -49,6 +49,8 @@
   
   </mat-toolbar>
 
+  <h5 >OverviewSports/{{sport}}/<span style="color:blue">{{discipline.disciplineName}}</span>  </h5>
+
   <div class="container">
   
     <div class="d-flex justify-content-between p-2">
