--- a/frontend/src/app/countries-represent/countries-represent.component.html
+++ b/frontend/src/app/countries-represent/countries-represent.component.html
@@ -42,44 +42,44 @@
 
 </mat-toolbar>
 
-<br>
+
 
 <div class="container">
-    <h5>Countries</h5>
-    <div class="row">
-        <div class="col-12">
-            <div class="span3">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th scope="col">Country</th>
-                            <th scope="col">Flag</th>
-                            <th scope="col">Number of Athletes</th>
+  
+    <div class="d-flex justify-content-between p-2">
+      <mat-paginator [pageSizeOptions]="[5, 10, 20,50,100]"
+      showFirstLastButtons 
+      aria-label="Select page of periodic elements">
+</mat-paginator>
+  
+  </div>
+  <h5>Search Results:</h5>
+  <div class="span3">
+    <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      
+ 
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef> Country </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.countryName}} </mat-cell>
+      </ng-container>
     
-                        </tr>
-                    </thead>
-                    <tbody>
+  
+      <ng-container matColumnDef="flag">
+        <th mat-header-cell *matHeaderCellDef> Image Url </th>
+        <td mat-cell *matCellDef="let element">  <img src="/assets/{{element.flagImage}}" class="img-thumbnail" style="width: 80px; height: 50px" alt=""> </td>
+      </ng-container>
     
-                        <tr *ngFor='let c of countries'>
-                            <td>
-                                {{c.countryName}}
+     
     
-                            </td>
-                            <td>
-                                <img src="/assets/{{c.flagImage}}" class="img-thumbnail" style="width: 80px; height: 50px" alt="">
-                            </td>
-                            <td>
-            
-                                {{c.numberOfAthletes}}
-                            </td>
-                            
+      <ng-container matColumnDef="number">
+        <mat-header-cell *matHeaderCellDef> Number of Athletes </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.numberOfAthletes}}</mat-cell>
+       
+      </ng-container>
     
-                        </tr>
-    
-                    </tbody>
-                </table>
-            </div>
-           
-        </div>
-    </div>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+
+  </div>
 </div>
