--- a/frontend/src/app/edit-timetable/edit-timetable.component.html
+++ b/frontend/src/app/edit-timetable/edit-timetable.component.html
@@ -158,7 +158,7 @@
                             <tbody>
 
 
-                                <tr *ngFor="let event of  currentTournament.quarterFinals;let index = index; trackBy:trackByIndex;">
+                                <tr *ngFor="let event of quarterFinals;let index = index; trackBy:trackByIndex;">
                                     <td>
                                         {{event.homeTeam.teamName}}
                                     </td>
