--- a/frontend/src/app/organizer/organizer.component.html
+++ b/frontend/src/app/organizer/organizer.component.html
@@ -43,7 +43,7 @@
 
         <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
             style="margin-left: 10px; " (click)="home()">
-            Back
+            Log out/Home
         </button>
     </div>
 
