--- a/frontend/src/app/insert-results-individual/insert-results-individual.component.html
+++ b/frontend/src/app/insert-results-individual/insert-results-individual.component.html
@@ -62,6 +62,7 @@
                     <button mat-raised-button color="primary"  (click)="finishEditing()" > Save</button>
                 </div>
                 
+                <h3 *ngIf="finished" style="color:green">Result Added</h3>
          
         </div>
         
